# biwa

./: .gitattributes  .gitignore  .oxfmtrc.json  .yamllint.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  biwa.toml  biwa.usage.kdl  clippy.toml  config-crates.md  deny.toml  dist-workspace.toml  docker-compose.yml  hk.pkl  mise.toml  oxfmtrc.json  pitchfork.toml  release-plz.toml  tarpaulin.toml  tasks.toml  test_figment_path.rs  tombi.toml  typos.toml
.github/: renovate.json  renovate.jsonc
.github/workflows/: autofix.yml  ci.yaml  ci.yml  docs.yml  release-plz.yml  release.yml  semantic-pr-lint.yml
.mise/: prepare-state.toml
docs/: .gitignore  .oxlintrc.json  comparison.md  hk.pkl  index.md  package.json  tsconfig.json  wrangler.jsonc
docs/.vitepress/: config.ts
docs/.vitepress/theme/: custom.css  index.ts  style.css
docs/public/schema/: config.json
docs/scripts/: fix-usage-docs.ts
docs/src/: about.md  configuration.md  contributing.md  direct-commands.md  env-vars.md  getting-started.md  index.md  shell-completion.md  ssh-key-setup.md  sync-behavior.md  why.md
docs/src/cli/: activate.md  clean.md  completion.md  index.md  init.md  pull.md  run.md  sync.md
docs/src/cli/activate/: doctor.md  install.md
docs/src/cli/clean/: stop.md
docs/src/public/schema/: config.json
schema/: config.json  tombi.toml
schema/fixtures/toml/: edge-env-forward-setenv.toml  edge-env-transfer-setenv.toml  edge-env-vars-array-of-tables-mixed.toml  edge-env-vars-array-of-tables.toml  edge-env-vars-empty.toml  edge-env-vars-glob.toml  edge-env-vars-mixed-list-and-table.toml  edge-env-vars-table-mixed.toml  edge-env-vars-table.toml  edge-hooks-null.toml  edge-password-string.toml  edge-password-true.toml  edge-sftp-permissions-setstat.toml  edge-sync-engine-mutagen.toml  edge-sync-root-null.toml  edge-umask-022.toml  full.toml  partial-env-only.toml  partial-log-only.toml  partial-ssh-only.toml  partial-sync-only.toml
src/: cache.rs  duration.rs  env_flag.rs  env_vars.rs  main.rs  path.rs  state.rs  testing.rs  ui.rs
src/cli/: activate.rs  clean.rs  completion.rs  init.rs  mod.rs  pull.rs  run.rs  schema.rs  sync.rs  transfer.rs  usage.rs
src/cli/snapshots/: biwa__cli__init__tests__init_json.snap  biwa__cli__init__tests__init_json5.snap  biwa__cli__init__tests__init_jsonc.snap  biwa__cli__init__tests__init_toml.snap  biwa__cli__init__tests__init_yaml.snap  biwa__cli__init__tests__init_yml.snap
src/config/: .load.rs.pending-snap  format.rs  load.rs  mod.rs  types.rs  yaml.rs
src/ssh/: auth.rs  clean.rs  exec.rs  mod.rs  sftp.rs  sync.rs  sync_paths.rs
src/ssh/client/: auth.rs  execute.rs  mod.rs
tasks/: start-ssh-server
tasks/docs/: deploy.ts
tasks/schema/: ajv
tests/: error_reporting.rs  ssh_e2e_clean.rs  ssh_e2e_run.rs  ssh_e2e_sync.rs
tests/common/: mod.rs
tests/fixtures/ssh-capable/: Dockerfile
