[package]
name = "biwa"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
repository = "https://github.com/risu729/biwa"
license = "MIT"
include = ["/README.md", "/src/**/*.rs"]
description = "CLI to execute commands on UNSW CSE servers from local"
keywords = ["unsw"]
categories = ["command-line-utilities"]

[dependencies]
async-ssh2-tokio = "=0.12.2"
clap = { version = "=4.5.59", features = ["derive"] }
color-eyre = "=0.6.5"
console = "=0.16.2"
dialoguer = "=0.12.0"
duct = "=1.1.1"
eyre = "=0.6.12"
confique = { version = "=0.3.0", features = ["toml", "yaml", "json5"] }
homedir = "=0.3.6"
indicatif = "=0.18.4"
itertools = "=0.14.0"
json5 = "=1.3.1"
schemars = "=1.2.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde_yaml = "=0.9.34"
shell-words = "=1.1.1"
strum = { version = "=0.27.2", features = ["derive"] }
tokio = { version = "=1.49.0", features = ["full"] }
toml = "=0.8.23"
tracing = "=0.1.44"
tracing-subscriber = "=0.3.22"
usage-lib = { version = "=2.18.0", features = ["clap", "docs"] }

[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
duct = "=1.1.1"
figment = { version = "=0.10.19", features = ["toml"] }
insta = { version = "=1.46.3", features = ["json"] }
pretty_assertions = "=1.4.1"
rstest = "=0.26.1"
tempfile = "=3.25.0"
