[package]
name = "biwa"
version = "0.1.1"
edition = "2024"
rust-version = "1.93.1"
description = "CLI to execute commands on UNSW CSE servers from local"
repository = "https://github.com/risu729/biwa"
license = "MIT"
keywords = ["unsw"]
categories = ["command-line-utilities"]
include = ["/README.md", "/src/**/*.rs"]

[dependencies]
bytes = "=1.11.1"
clap = { version = "=4.6.0", features = ["derive"] }
color-eyre = "=0.6.5"
confique = { version = "=0.4.0", features = ["json5", "toml", "yaml"] }
console = "=0.16.3"
derive_more = { version = "=2.1.1", features = ["deref"] }
dialoguer = "=0.12.0"
duct = "=1.1.1"
gethostname = "=1.1.0"
globset = "=0.4.18"
hex = "=0.4.3"
homedir = "=0.3.6"
ignore = "=0.4.25"
indicatif = "=0.18.4"
itertools = "=0.14.0"
json5 = "=1.3.1"
russh = { version = "=0.58.0", default-features = false, features = [
	"flate2",
	"ring",
	"rsa"
] }
russh-sftp = "=2.1.1"
schemars = "=1.2.1"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde_yaml = "=0.9.34"
sha2 = "=0.10.9"
shell-words = "=1.1.1"
strum = { version = "=0.28.0", features = ["derive"] }
tokio = { version = "=1.50.0", features = ["full", "io-util"] }
tokio-stream = "=0.1.18"
tokio-util = { version = "=0.7.18", features = ["io"] }
toml = "=1.1.1"
tracing = "=0.1.44"
tracing-subscriber = "=0.3.23"
usage-lib = { version = "=3.2.0", features = ["clap", "docs"] }

[dev-dependencies]
ctor = "=0.8.0"
insta = { version = "=1.47.2", features = ["json"] }
pretty_assertions = { version = "=1.4.1", features = ["unstable"] }
rstest = "=0.26.1"
serial_test = "=3.4.0"
tempfile = "=3.27.0"

[lints.clippy]
# We prefer disabling rules than enabling them
blanket_clippy_restriction_lints = "allow"
cargo = { level = "warn", priority = -1 }
default_numeric_fallback = "allow"
default_union_representation = "allow"
# We don't need to care about breaking changes in non-public APIs
exhaustive_enums = "allow"
exhaustive_structs = "allow"
# We can panic if the error is unrecoverable
expect_used = "allow"
# We don't develop neither embedded systems nor kernel
float_arithmetic = "allow"
# Conflicts with `indexing_slicing`
get_unwrap = "allow"
# We prefer idiomatic Rust code
implicit_return = "allow"
# We allow single char identifiers for brevity
min_ident_chars = "allow"
# We shouldn't enable globally
missing_trait_methods = "allow"
# Conflicts with `self_named_module_files`
mod_module_files = "allow"
# cargo-deny checks some cases
multiple_crate_versions = "allow"
# We live in the 2020s
non_ascii_literal = "allow"
nursery = { level = "warn", priority = -1 }
# We can rely on Match Ergonomics
pattern_type_mismatch = "allow"
pedantic = { level = "warn", priority = -1 }
# CLI needs to print to stderr and stdout
print_stderr = "allow"
print_stdout = "allow"
# Conflicts with `pub_without_shorthand`
pub_with_shorthand = "allow"
# We can use `?` operator
question_mark_used = "allow"
# ref: https://rust-lang.github.io/rust-clippy/master/?groups=restriction
restriction = { level = "warn", priority = -1 }
# Conflicts with `semicolon_inside_block`
semicolon_outside_block = "allow"
# Conflicts with `unseparated_literal_suffix`
separated_literal_suffix = "allow"
# We like shadowing
shadow_reuse = "allow"
# We prefer to split into multiple functions
single_call_fn = "allow"
# Single char lifetime names are more idiomatic
single_char_lifetime_names = "allow"
# mut String is worse than String + "..."
string_add = "allow"
# We have some unimplemented features
unimplemented = "allow"

# TODO: remove this after merging PRs to avoid conflicts
arbitrary_source_item_ordering = "allow"

[profile.dist]
inherits = "release"
lto = "thin"
